--- a/middlegen.properties
+++ b/middlegen.properties
@@ -1,20 +1,19 @@
 #mysql配置
 database.driver=com.mysql.jdbc.Driver
-database.url=jdbc:mysql://192.168.1.106:3306/test?characterEncoding=utf-8
+database.url=jdbc:mysql://127.0.0.1:3306/studb?characterEncoding=utf-8
 database.userid=root
-database.password=root
+database.password=hzit
 database.catalog=
-tablename=test_a
-author=ROCKY
+tablename=grade,student,result
+author=wangguangjun
 
 ##包基本上为4层，这里缺少项目名称，请添加。
-package=xxx.yyy.demo
+package=com.wang.dao
 
 ###############################下面无需修改#######################################
 #项目的lib
 lib.dir=./libs/
 bin.dir=./libs/
-
 #dest.dir 生成项目的物理地址 
 showgui=false
 dest.dir=gensrc
